--- a/SpringBoot1/pom.xml
+++ b/SpringBoot1/pom.xml
@@ -4,18 +4,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.zf.springboot</groupId>
-    <artifactId>springdemo1</artifactId>
+    <artifactId>SpringBoot1</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>SpringDemo1</name>
+    <name>SpringBoot1</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.3.2.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>2.0.0.RELEASE</version>
+
     </parent>
 
     <properties>
